rgw: Swift API returns 400 Bad Request on too long container names.

Fixes: http://tracker.ceph.com/issues/17935
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>